fixed section visibility

--- a/blocks/section-background/section-background.css
+++ b/blocks/section-background/section-background.css
@@ -14,6 +14,7 @@
     right: 0;
     bottom: 50%;
     overflow: hidden;
+    z-index: -1;
 }
 
 .section-background img {
